# OpenModelStudio

./: .dockerignore  .gitignore  Makefile  README.md  sales_dummy.csv
.github/workflows/: ci.yml  docker.yml  publish-sdk.yml  test-python.yml
api/: Cargo.toml
api/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs
api/src/middleware/: auth.rs
api/src/models/: artifact.rs  dataset.rs  experiment.rs  extra.rs  hyperparameters.rs  job.rs  job_log.rs  mod.rs  model.rs  notification.rs  pipeline.rs  project.rs  sweep.rs  user.rs  workspace.rs
api/src/routes/: admin.rs  api_keys.rs  artifacts.rs  auth.rs  automl.rs  data_sources.rs  datasets.rs  environments.rs  experiments.rs  features.rs  healthz.rs  inference.rs  llm.rs  mod.rs  models.rs  monitoring.rs  notifications.rs  projects.rs  sdk.rs  search.rs  templates.rs  training.rs  visualizations.rs  workspaces.rs
api/src/services/: k8s.rs  llm.rs  metrics.rs  mod.rs  notify.rs  s3.rs
api/tests/: auth_test.rs  health_test.rs  models_test.rs  projects_test.rs
db/: init.sql  migrate.sql  seed.sh  seed.sql
db/migrations/: 001_initial_schema.sql  002_training_metrics.sql  003_visualizations.sql  004_registry_name.sql  005_dataset_schema.sql  006_experiment_run_nullable_job.sql  007_experiment_run_model_id.sql
deploy/: Dockerfile.api  Dockerfile.frontend  Dockerfile.model-runner-python  Dockerfile.model-runner-rust  Dockerfile.postgraphile  Dockerfile.workspace  docker-compose.dev.yaml
deploy/k8s/: api.yaml  configmap.yaml  frontend.yaml  jupyter-hub.yaml  namespace.yaml  nodeport-services.yaml  postgraphile.yaml  postgres.yaml  pvc.yaml  rbac.yaml  secret.yaml
deploy/kind/: kind-config.yaml  setup.sh  teardown.sh  wait-ready.sh
docs/: API-FOR-AGENTS.md  ARCHITECTURE.md  CLI-REGISTRY.md  CONTRIBUTING.md  DATASET-GUIDE.md  DEPLOYMENT.md  LLM-INTEGRATION.md  MODEL-AUTHORING.md  MODELING.md  OPENCLAW-AND-CLAUDE.md  OPENCLAW-INTEGRATION.md  OPENCLAW-QUICKSTART.md  USAGE.md  VISUALIZATIONS.md
docs/diagrams/: generate-architecture.js
integrations/openclaw/: AGENTS-oms-example.md  README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json
model-runner/python/: artifact_manager.py  context.py  data_loader.py  metrics.py  model_interface.py  requirements.txt  runner.py  utils.py
model-runner/rust/: Cargo.toml
model-runner/rust/src/: context.rs  data_loader.rs  main.rs  metrics.rs  mlp.rs
pipelines/video-dataset/: README.md  annotate.py  audio_process.py  config.yaml  download_test_data.py  export.py  ingest.py  publish.py  requirements.txt  segment.py  stream_loader.py  validate.py
postgraphile/: package-lock.json  package.json  server.js
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/openmodelstudio/: __init__.py  __main__.py  cli.py  client.py  config.py  model.py  registry.py  visualization.py
tests/e2e/: admin.spec.ts  auth.spec.ts  automl.spec.ts  dashboard-verification.spec.ts  dashboard.spec.ts  data-sources.spec.ts  datasets.spec.ts  experiments.spec.ts  features.spec.ts  full-flow.spec.ts  inference.spec.ts  models.spec.ts  monitoring.spec.ts  navigation.spec.ts  notebook-workflow.spec.ts  notifications-search.spec.ts  package-lock.json  package.json  playwright.config.ts  project-filter-flow.spec.ts  projects.spec.ts  sdk-workflow.spec.ts  search-and-registry.spec.ts  search.spec.ts  settings.spec.ts  templates.spec.ts  training.spec.ts  workspaces.spec.ts
tests/python/: conftest.py  pytest.ini  requirements-test.txt
web/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
workspace/: registry.ipynb  visualization.ipynb  welcome.ipynb
(+111 files in other folders)
