[package]
name = "openmodelstudio-runner"
version = "0.1.0"
edition = "2021"
description = "Minimal Rust model runner for OpenModelStudio"

[dependencies]
tch = "0.16"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-sdk-s3 = "1"
aws-config = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
