[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "openmodelstudio"
version = "0.0.1"
description = "OpenModelStudio SDK — register models, log metrics, and manage artifacts from JupyterLab workspaces"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [
    { name = "jovonni", email = "jovonnipharr@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28",
]

[project.scripts]
openmodelstudio = "openmodelstudio.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.2.0",
    "responses>=0.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/GACWR/OpenModelStudio"
Repository = "https://github.com/GACWR/OpenModelStudio"
Issues = "https://github.com/GACWR/OpenModelStudio/issues"
Documentation = "https://github.com/GACWR/OpenModelStudio/tree/master/sdk/python"

[tool.hatch.build.targets.wheel]
packages = ["openmodelstudio"]
